--- a/tab2img.ipynb
+++ b/tab2img.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
        "462"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,22 +79,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.savetxt(\"temp.txt\", X_test.iloc[0].values)\n"
+    "converter = Tab2Img(allow_pickle=True)\n",
+    "images = converter.fit_transform(X_train.values, y_train.values)\n",
+    "test_images = converter.transform(X_test.values)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "converter = Tab2Img()\n",
-    "images = converter.fit_transform(X_train.values, y_train.values)\n",
-    "test_images = converter.transform(X_test.values)"
+    "import pickle\n",
+    "file = open(\"tab2imgconverter.pkl\", \"wb\")\n",
+    "pickle.dump(converter, file)\n",
+    "file.close()"
    ]
   },
   {
@@ -132,26 +135,6 @@
     "from tensorflow import keras\n",
     "import tensorflow as tf\n",
     "from keras.callbacks import ModelCheckpoint, EarlyStopping, ReduceLROnPlateau,LearningRateScheduler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(367130, 22, 22)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images.shape"
    ]
   },
   {
