clear work tree

--- a/tab2img.ipynb
+++ b/tab2img.ipynb
@@ -79,6 +79,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(367130, 462)"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
@@ -378,53 +398,6 @@
    "outputs": [],
    "source": [
     "cnn_model.save(\"cnn_model.h5\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\asude\\anaconda3\\envs\\ML\\lib\\site-packages\\tensorflow\\python\\autograph\\pyct\\static_analysis\\liveness.py:83: Analyzer.lamba_check (from tensorflow.python.autograph.pyct.static_analysis.liveness) is deprecated and will be removed after 2023-09-23.\n",
-      "Instructions for updating:\n",
-      "Lambda fuctions will be no more assumed to be used in the statement where they are used, or at least in the same block. https://github.com/tensorflow/tensorflow/issues/56089\n",
-      "WARNING:tensorflow:AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x00000134DE350940> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: closure mismatch, requested ('self', 'step_function'), but source function had ()\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "WARNING: AutoGraph could not transform <function Model.make_predict_function.<locals>.predict_function at 0x00000134DE350940> and will run it as-is.\n",
-      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
-      "Cause: closure mismatch, requested ('self', 'step_function'), but source function had ()\n",
-      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
-      "2869/2869 [==============================] - 8s 2ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.10921569],\n",
-       "       [0.8640646 ],\n",
-       "       [0.00100374],\n",
-       "       ...,\n",
-       "       [0.00095071],\n",
-       "       [0.7531336 ],\n",
-       "       [0.0519698 ]], dtype=float32)"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cnn_pred = cnn_model.predict(test_images)\n",
-    "cnn_pred_labels = cnn_pred.copy()\n",
-    "cnn_pred_labels[cnn_pred_labels >= 0.5] = 1\n",
-    "cnn_pred_labels[cnn_pred_labels < 0.5] = 0"
    ]
   },
   {
